# merkle-trees

./: Cargo.toml  README.md
src/: lib.rs
src/hash/: circuit.rs  mod.rs  vanilla.rs
src/index_tree/: circuit.rs  mod.rs  tree.rs
src/vanilla_tree/: circuit.rs  tree.rs
